<resources>
    <string name="app_name">Alcool ou Gasolina</string>
    <string name="descricao_app">Saiba a melhor opção de abastecimento para o seu carro!</string>
    <string name="preco_alcool">Preço álcool ex: 1.60</string>
    <string name="preco_gasolina">Preço gasolina ex: 2.60</string>
    <string name="button_calcular">Calcular</string>
    <string name="resultado">Resultado:</string>
    <string name="description_logo">Logotipo do app Alcool ou Gasolina no qual aparece o desenho de um carro azul</string>
</resources>
